# Arpeggio

./: .gitignore  CMakeLists.txt  DrawPrimitives.h  LICENSE  README.md  example_bach.mid  example_mond.mid  main.cpp
key-recognition/: CMakeLists.txt  CMarkerFinder.cpp  CMarkerFinder.h  ContourScaler.h  KeyFinder.cpp  KeyFinder.h  VideoFeedTransformer.cpp  VideoFeedTransformer.h  main.cpp
music/: CBlues.cpp  CBlues.h  CDur.cpp  CDur.h  ContinuousMusic.cpp  ContinuousMusic.h  MicPitchParser.cpp  MicPitchParser.h  Midi.cpp  Midi.h  Music.cpp  Music.h  MusicSelection.cpp  MusicSelection.h  Note.cpp  Pitch.h  VirtualKeyboard.cpp
music/libfft/: libfft.cpp  libfft.h
rendering/: DrawPrimitives.h  PoseEstimation.cpp  Renderer.cpp  Renderer.h
