cmake_minimum_required(VERSION 3.19)
project(Arpeggio)
find_package( OpenCV REQUIRED )
set(CMAKE_CXX_STANDARD 20)
set(glfw3_DIR .\\GLFW)
list(APPEND CMAKE_PREFIX_PATH "./glew-2.1.0-win32/glew-2.1.0")
find_package(GLEW REQUIRED)
find_package(OpenGL REQUIRED)
add_subdirectory(./GLFW)
include_directories(${GLEW_INCLUDE_DIRS})
include_directories(${OpenCV_INCLUDE_DIRS})
add_executable(Arpeggio key-recognition/KeyFinder.cpp key-recognition/KeyFinder.h)
target_link_libraries( ${PROJECT_NAME} ${OpenCV_LIBS} ${GLEW_LIBRARIES} glfw ${OPENGL_LIBRARIES})